<resources>
    <string name="app_name">Single Hotel</string>

    <string name="app_sub_name">singlehotel@gmail.com</string>

    <string name="play_more_app">https://play.google.com/store/apps/developer?id=Vishal+Android+Apps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>

    <string name="admob_privacy_link">https://www.your.com/privacyurl</string>

    <string name="google_maps_key">AIzaSyDqJZDEt2DHp6Nm0aGtAIgTzoaFxVh1mag</string>

    <string name="home">Home</string>
    <string name="room">Room</string>
    <string name="location">Location</string>
    <string name="gallery">Gallery</string>
    <string name="facilities">Facilities</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="main_activity">Main Activity Single Hotel</string>

    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="internet_connection_message">Internet connection not available check your internet connection</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="exit">Exit</string>
    <string name="loading">Loading....</string>

    <!--<about_us.xml string>-->
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">2.1.5(1020)</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">Viavi Webtech</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">info@viaviweb.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.viaviweb.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>
    <!--<about_us.xml string>-->

    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_register">REGISTER</string>
    <string name="button_text_forgot_password">FORGOT PASSWORD ?</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_login_text">Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="conform_password">Conform Password</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_name">please enter name</string>
    <string name="button_text_skip">Skip</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_failed">Login Failed</string>

    <string name="room_amenities">Room Amenities</string>
    <string name="price">$120</string>
    <string name="book_now">Book Now</string>
    <string name="contactUs_name">Name:-</string>
    <string name="contactUs_description">Description:-</string>
    <string name="contactUs_subject">Subject:-</string>

    <string name="contactUs_phoneNo">Phone No:-</string>
    <string name="contactUs_email">Email:-</string>
    <string name="Button_Submit_ContactUs">Submit</string>
    <string name="name_ContactUs">enter name</string>
    <string name="email_ContactUs">enter valid email address</string>
    <string name="phoneNumber_contactUs">enter phone number</string>
    <string name="subject_ContactUs">enter subject</string>
    <string name="description_ContactUs">enter description</string>
    <string name="no_gallery">No Gallery</string>

    <string name="name_profile">Name :-</string>
    <string name="email_profile">Email :-</string>
    <string name="password_profile">Password :-</string>
    <string name="confirm_password_profile">confirm Password :-</string>
    <string name="phone_profile">Phone :-</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Success Full Save Profile</string>
    <string name="send">Send</string>
    <string name="action_logout">Log out</string>
    <string name="view_room">View room</string>
    <string name="room_rules">Room Rules</string>
    <string name="reviews">Reviews</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="setting">Setting</string>
    <string name="departureDate">Departure Date</string>
    <string name="arrivalDate">Arrival Date</string>
    <string name="adults">Adults:-</string>
    <string name="children">Children:-</string>
    <string name="password_not_match">Password and confirm password does not match</string>
    <string name="your_message">Your Message:-</string>
    <string name="select_room">Select room:-</string>
    <string name="please_select_adults">Please select adults</string>
    <string name="please_select_children">Please select children</string>
    <string name="please_select_room">Please select room</string>
    <string name="please_select_arrivalDate">Please select arrival date</string>
    <string name="please_select_departureDate">Please select departure date</string>
    <string name="please_select_first_arrivalDate">Please select first arrival date</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="facilities_detail">Facilities Detail</string>
    <string name="please_rate">Please rating</string>
    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>

</resources>
