<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <ScrollView
        android:background="@color/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_setting" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/textView_setting_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@+id/switch_setting"
                    android:layout_toLeftOf="@+id/switch_setting"
                    android:text="@string/enable_push_notification"
                    android:textColor="@color/textView_setting"
                    android:textSize="16sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_setting" />

            <TextView
                android:id="@+id/textView_shareApp_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/share_app"
                android:textColor="@color/textView_setting"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_setting" />

            <TextView
                android:id="@+id/textView_rateApp_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/rate_app"
                android:textColor="@color/textView_setting"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_setting" />


            <TextView
                android:id="@+id/textView_moreApp_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/more_app"
                android:textColor="@color/textView_setting"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_setting" />

            <TextView
                android:id="@+id/textView_privacy_policy_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/textView_setting"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_setting" />

            <TextView
                android:id="@+id/textView_aboutUs_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/about_us"
                android:textColor="@color/textView_setting"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>