<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:id="@+id/relativeLayout_room_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView_room_adapter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder_landscap"
            app:riv_corner_radius="5dip" />

        <View
            android:id="@+id/view_room_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_thum_textview_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView_room_adapter"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_roomName_room_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lorem"
                android:textColor="@color/room_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_detail_room_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lorem"
                android:textColor="@color/room_text"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.github.ornolfr.ratingview.RatingView
                    android:id="@+id/ratingBar_room_adapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:drawable_empty="@drawable/stare"
                    app:drawable_filled="@drawable/select_stare"
                    app:drawable_margin="1dp"
                    app:drawable_size="12dp"
                    app:is_indicator="true"
                    app:max_count="5" />

                <TextView
                    android:id="@+id/textView_totalRate_room_adapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="(10)"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/room_adapter_price_bg"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView_price_room_adapter"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_price" />

        <TextView
            android:id="@+id/textView_roomPrice_room_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:text="@string/price"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button_room_adapter"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_login_background"
        android:text="@string/view_room"
        android:textColor="@color/room_text"
        android:textSize="12sp"
        android:textStyle="bold" />

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/smoothProgressBar_room_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:spb_color="@color/toolbar"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="1.5"
        app:spb_progressiveStop_speed="3.4"
        app:spb_reversed="false"
        app:spb_sections_count="4"
        app:spb_speed="2.0"
        app:spb_stroke_separator_length="4dp"
        app:spb_stroke_width="4dp" />

</RelativeLayout>